# zagrosi-forge

./: .codexignore  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: validate.yml
examples/deep-review/: README.md
examples/deep-review/zero-downtime-migration/: requirements.md
examples/evals/: README.md  suite.json
examples/evals/golden/: saas-authentication-forge-score.json  typescript-auth-preferences-forge-score.json
examples/gallery/: README.md
examples/gallery/ai-agent-app/: requirements.md
examples/gallery/data-migration/: requirements.md
examples/gallery/go-service/: requirements.md
examples/gallery/nextjs-saas/: requirements.md
examples/gallery/python-fastapi/: requirements.md
examples/gallery/rails-app/: requirements.md
examples/invalid/bad-governance/: decisions.md  risk-register.md  traceability.md
examples/invalid/fake-evidence/: codex-plan.md
examples/invalid/missing-section-index/: README.md
examples/invalid/no-tests/: codex-plan.md
examples/saas/: project-manifest.md  requirements.md  zagrosi_project_interview.md
examples/saas/01-authentication/: codex-evidence.md  codex-integration-notes.md  codex-interview.md  codex-plan-tdd.md  (+8 more)
examples/typescript-app/: project-manifest.md  requirements.md  zagrosi_project_interview.md
scripts/: deep_skills.py  zagrosi_skills.py
skills/zagrosi-implement/: SKILL.md
skills/zagrosi-plan/: SKILL.md
skills/zagrosi-project/: SKILL.md
tests/: test_zagrosi_skills.py
(+50 files in other folders)
